--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/PorkTenderloin.html">Pork Tenderloin</a>
+    <ul>
+        <li><a href="recipes/PorkTenderloin.html">Pork Tenderloin</a></li>
+        <li><a href="recipes/hamburger.html">Hamburger</a></li>
+        <li><a href="recipes/asparagus.html">Asparagus</a></li>
+    </ul>
 </body>
 </html>
