--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hamburger</title>
 </head>
 <body>
     <h1>Hamburger</h1>
@@ -35,5 +35,6 @@
         <li>Meanwhile, combine ground beef, onion, cheese, egg, onion soup mix, minced garlic, garlic powder, soy sauce, Worcestershire sauce, parsley, basil, oregano, rosemary, salt, and pepper in a large bowl. Use your hands to form the mixture into 4 patties.</li>
         <li>Cook patties on the preheated grill until no longer pink in the center and the juices run clear, about 4 to 5 minutes per side. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
     </ol>
+    <p><a href="../index.html">Back to Home</a></p>
 </body>
 </html>
