--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 class="home">Odin Recipes</h1>
+    <ul class="link">
         <li><a href="recipes/PorkTenderloin.html">Pork Tenderloin</a></li>
         <li><a href="recipes/hamburger.html">Hamburger</a></li>
         <li><a href="recipes/asparagus.html">Asparagus</a></li>
